[metadata]
name = torrent-edit
description = Edit BitTorrent metadata (trackers and private flag)
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
license_files = LICENSE
url = https://github.com/ysard/torrent-edit
version = attr: torrent_edit.__version__
keywords = torrent, bittorrent, dht, trackers
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    Topic :: Internet
    Topic :: Communications :: File Sharing
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.9
install_requires =
    bcoding

include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    torrent-edit = torrent_edit.core:main

[zest.releaser]
    create-wheel = yes
    python-file-with-version = torrent_edit/__init__.py
